--- a/matrices/Makefile
+++ b/matrices/Makefile
@@ -21,10 +21,6 @@ LD  = g++
 
 CXXFLAGS   = -Wall -Wextra --std=c++11
 
-# PAPI stuff
-CXX_FLAGS+=-I$(PAPI_DIR)/include -L$(PAPI_DIR)/lib -DPAPI_SUPPORT
-LIBS+= -lpapi
-
 ifeq ($(AVX),yes)
 	CXXFLAGS += -mavx -DAVX
 else
@@ -67,7 +63,6 @@ vpath %.cpp $(SRC_DIR)
 # Rules
 ################################################################################
 
-
 .DEFAULT_GOAL = all
 
 $(BUILD_DIR)/%.d: %.cpp
@@ -84,6 +79,10 @@ checkdirs:
 	@mkdir -p $(BIN_DIR)
 
 all: checkdirs $(BIN_DIR)/$(BIN_NAME)
+
+papi: CXXFLAGS +=-I$(PAPI_DIR)/include -L$(PAPI_DIR)/lib -DPAPI_SUPPORT
+papi: LIBS += -lpapi
+papi: all
 
 clean:
 	rm -f $(BUILD_DIR)/* $(BIN_DIR)/* 
